fixed overflow issue

--- a/src/dashboard/dashboardstyles/dashboardstyles.scss
+++ b/src/dashboard/dashboardstyles/dashboardstyles.scss
@@ -369,7 +369,7 @@ h5 {
   background-color: white;
 }
 .dashboard-add-transaction-cx {
-  position: absolute;
+  position: fixed;
   z-index: 1000;
   bottom: 80px;
   right: 15px;
