--- a/src/pages/pagesstyles/pagesstyle.scss
+++ b/src/pages/pagesstyles/pagesstyle.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: fit-content;
-  border: solid red;
+ 
 //  position: relative;
 }
 .page-header {
@@ -23,5 +23,5 @@
 .content-cx {
   overflow-y: scroll;
   height: 91%;
-  border: solid rgb(0, 17, 255);
+ 
 }
